 
    Added SLESSetDiagonalScale(), -sles_diagonal_scale to allow one to scale the system
    before computing the preconditioner and solving. For certain systems this can improve the
    convergence of the iterative method. But be careful because this CHANGES the right hand side
    and the matrix unless you also use the options SLESSetDiagonalScaleFix(), -sles_diagonal_scale_fix
   
 

  PC

  

 
  AO

    

  IS

    
  Draw

    

    

  General

   Changed these routines to return an error code.
extern int   PetscStrchr(const char[],char,char **);
extern int   PetscStrrchr(const char[],char,char **);
extern int   PetscStrstr(const char[],const char[],char **);
extern int   PetscStrtok(const char[],const char[],char **);    
extern int   PetscStrlen(const char[],int *);
added PetscStrallocpy(const char[],char **);
PetscStrncmp() and PetscStrcasecmp() now return PETSC_TRUE as a final argument
if the strings match else PETSC_FALSE. Note this means removing ! from your current
tests and adding it where you don't have it.

PetscMemcmp() now has a final argument of true for matching memories.

   The Fortran versions of the PetscStrxxx() and PetscMemxxx() routines also now 
have the error flag as the final argument.
   
   Added CHKMEMQ and CHKMEMA macros to help track down memory corruption.
   
   PetscFree() now always returns an error code that may be checked with CHKERRQ(). 
   On systems where free() returns a void (and the user has no access to an error
   condition in free(), PetscFree() returns 0 i.e. no error; on other systems it 
   returns the error number from free.

   using -trdump with PETSC_USE_STACK compile option (default for BOPT=g*) will print the entire
   stack for each malloc, allow one to more easily track down where mallocs where made that where not
   freed.

  Viewer

   

  SNES 

  Changed calling sequence of SNES monitoring routines to add an additional output parameter indicating
  why it converged or diverged.
